# roo-config

./: .cct_config.json  .gitignore  ARCHITECT_PLANNING_COMPLETE.md  FIX_PLAN.md  MODIFIED_FILES.txt  NEEDS_ARCHITECTURAL_REVIEW.md  NEEDS_ASSISTANCE.md  README.md  ROO_USAGE_README.md  app_description.md  copy_script.sh  indexer.py  kilo-code-settings.json  pyproject.toml  requirements.txt  setup_enviroment.sh  todo.md  vector_tool.py  workflow.md
.github/workflows/: test.yml
.kilocode/: custom_modes.yaml  rules.md
.kilocode/rules-auditor/: rules.md
.kilocode/rules-developer/: rules.md
.kilocode/rules-dispatcher/: rules.md
.kilocode/rules-planner/: rules.md
.kilocode/rules-product-manager/: rules.md
.kilocode/rules-product-user/: rules.md
.kilocode/rules-refactorer/: rules.md
.roo/: custom_modes.yaml
.roo/rules-architect/: rules.md
.roo/rules-architect-senior/: rules.md
.roo/rules-auditor/: rules.md
.roo/rules-developer/: rules.md
.roo/rules-emergency/: rules.md
.roo/rules-janitor/: rules.md
.roo/rules-orchestrator/: rules.md
.roo/rules-orchestrator-senior/: rules.md
.roo/rules-planner-architect/: rules.md
.roo/rules-qa-engineer/: rules.md
docs/: index.md
documentation/: business_requirements.md  file_manifest.md  functional_requirements.md  master_plan.md  technical_design_specification.md
execution_scripts/: copy_script.sh
tests/: test_installation.py  test_requirements.py
todos/: dev_todo_phase_1.md  dev_todo_phase_2.md  dev_todo_phase_3.md  dev_todo_phase_4.md  dev_todo_phase_5.md  master_development_plan.md  task.md
(+9 files in other folders)
